2000-07-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* root.[ch] (scm_call_catching_errors):  Deprecated.

	* root.c (scm_init_root):  Initialize the root smob type using the
	standard initialization functions.

2000-07-17  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (unmemocopy): Don't rely on V being a list of at least
	one element.  Thanks to Bill Schottstaedt!

2000-07-15  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_done_free): new.
	expanded comments about scm_done_malloc.

	* gc.h: added prototype for scm_done_free

2000-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (scm_take_stdin):  Removed.

	* gc.h (SCM_VALIDATE_CELL):  Delegate cell checks to function
	scm_assert_cell_valid to allow extensions to the checking
	functionality without need to recompile everything.

	* gc.[ch] (scm_assert_cell_valid, scm_set_debug_cell_accesses_x):
	Added as conditionally compiled functions for the case that
	SCM_DEBUG_CELL_ACCESSES is enabled.

	* gc.c (debug_cells_p):  Added to indicate whether compile-time
	included cell access debugging is run-time enabled.

	* gc.[ch] (scm_gc_running_p):  Added to indicate that scm_igc is
	being executed.  Intended to be used instead of scm_gc_heap_lock
	at most places.

	* error.c (scm_error), gdbint.c (SCM_GC_P):  Use scm_gc_running_p
	instead of scm_gc_heap_lock.

	* gc.c (scm_igc):  Set scm_gc_running_p to true while running.

	* gc.c (scm_mark_locations):  Don't mark free cells.

	* weaks.c (scm_scan_weak_vectors):  Use SCM_FREE_CELL_P instead of
	SCM_FREEP.

2000-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_mark_locations):  Minimized some variable scopes and
	simplified the code a bit.

2000-07-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (SCM_SET_FREE_CELL_TYPE, SCM_SET_FREE_CELL_CDR,
	SCM_FREE_CELL_P, SCM_FREE_CELL_CDR):  Added since free cells
	should not be accessed via SCM_C[AD]R.  Further, using dedicated
	macros to access free cells allows all other cell accessing macros